<resources>
    <string name="app_name">BookHub</string>
    <string name="menu_item_dashboard">Dashboard</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="about">About Us</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="imgDescription">Image</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="favorite_fragment">Favorite Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="about_fragment">About Us</string>
    <string name="img_desc_profile_image">Profile Image</string>
    <string name="txt_profile_name">Arbaaz Shah</string>
    <string name="txt_profile_email">Email: example@gmail.com</string>
    <string name="txt_profile_number">Mobile No: +971500000000</string>
    <string name="txt_profile_address">Address:- 23St, Al Rigga, Deira, Dubai, Dubai, U.A.E</string>
    <string name="txt_title_of_the_book">Title of the Book</string>
    <string name="txt_rating">⭐</string>
    <string name="txt_author">Author</string>
    <string name="txt_price">Rs. 299</string>
    <string name="btn_txt_check_internet">Check Internet</string>
    <string name="txt_about_the_book">About the Book</string>
    <string name="btn_txt_add_to_favorite">Add to Favorite</string>
    <string name="txt_book_desc">Description of the book will be displayed here</string>
    <string name="txt_remove_from_favorite">Remove from Favorite</string>
    <string name="txt_demo_rating">⭐ 4.5</string>
</resources>