<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    tools:context=".ProfileFragment">

    <ImageView
        android:id="@+id/imgProfilePic"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/img_desc_profile_image"
        android:src="@drawable/profile_pic" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgProfilePic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/txt_profile_name"
        android:textColor="@color/primaryColor"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/txt_profile_email"
        android:textColor="@color/primaryColorDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/txt_profile_number"
        android:textColor="@color/primaryColorDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPhoneNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="95dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="95dp"
        android:text="@string/txt_profile_address"
        android:textColor="@color/primaryColorDark"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>