<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlContent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvListItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgBookCover"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/imgDescription"
                android:scaleType="centerCrop"
                android:src="@drawable/book_app_icon_web" />

            <TextView
                android:id="@+id/tvBookTitleID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/imgBookCover"
                android:text="@string/txt_title_of_the_book"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvRatingID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/txt_rating"
                android:textColor="@color/yellow"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAuthorID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvBookTitleID"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/imgBookCover"
                android:text="@string/txt_author"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPriceID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAuthorID"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/imgBookCover"
                android:text="@string/txt_price"
                android:textColor="@color/green"
                android:textSize="16sp" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>